cleanup unused code and fix compile errors. fix rest api issues.